--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -104,7 +104,7 @@ const players = [
     {points:null, minutes:54, goals:0, assists:0, cards:0, comment:'↪️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
   
   { id:2, name:'Gabri', pos:'Portero', status:'OK', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
