--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -98,6 +98,7 @@
 </div>
 
 <script>
+      //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
 const players = [
   { id:1, name:'J. Agudo', pos:'Portero', status:'Lesionado', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
