--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -104,176 +104,177 @@ const players = [
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:54, goals:0, assists:0, cards:0, comment:'↪️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
+  ]},
   
   { id:2, name:'Gabri', pos:'Portero', status:'OK', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,3)'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+  ]},
   
   { id:3, name:'Álvaro', pos:'Portero', status:'Duda', performances:[
     {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,5)'},
     {points:null, minutes:36, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+  ]},
   
   { id:4, name:'Luisja', pos:'Defensa', status:'OK', performances:[
     {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,2)'},
     {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (Sin grabación)'},
     {points:4, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,8)'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+  ]},
   
   { id:5, name:'J. Martínez', pos:'Atacante', status:'OK', performances:[
     {points:3, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,7)'},
     {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (Sin grabación)'},
     {points:9, minutes:63, goals:1, assists:0, cards:0, comment:'↪️⚽ (7,3+⚽)'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+  ]},
   
   { id:6, name:'Rafa Crooke', pos:'Defensa', status:'OK', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
     {points:null, minutes:26, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+  ]},
   
   { id:7, name:'Jacobo', pos:'Defensa', status:'Lesionado', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
     {points:4, minutes:63, goals:0, assists:0, cards:0, comment:'↪️ (6,9)'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
+  ]},
   
   { id:8, name:'Rodri', pos:'Defensa', status:'OK', performances:[
     {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,4)'},
     {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(Sin grabación)'},
     {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,3)'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+  ]},
   
   { id:9, name:'Adriano', pos:'Defensa', status:'Duda', performances:[
     {points:9, minutes:90, goals:0, assists:0, cards:0, comment:'(7,8)'},
     {points:null, minutes:64, goals:0, assists:0, cards:1, comment:'🟨↪️ (Sin grabación)'},
     {points:2, minutes:27, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+  ]},
   
   { id:10, name:'Á. Infante', pos:'Defensa', status:'Duda', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
+  ]},
   
   { id:11, name:'A. Molina', pos:'Centrocampista', status:'OK', performances:[
     {points:4, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (6,8)'},
     {points:null, minutes:75, goals:0, assists:0, cards:0, comment:'↪️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+  ]},
   
   { id:12, name:'L. Lausín', pos:'Defensa', status:'OK', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
     {points:2, minutes:20, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+  ]},
   
   { id:13, name:'J. Zarcero', pos:'Defensa', status:'OK', performances:[
     {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:4, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,8)'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+  ]},
   
   { id:14, name:'Kito', pos:'Centrocampista', status:'OK', performances:[
     {points:6, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,3)'},
     {points:null, minutes:75, goals:0, assists:0, cards:0, comment:'↪️ (Sin grabación)'},
     {points:7, goals:0, assists:1, cards:1, comment:'🟨↪️🅰️ (7,2+🅰️)'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+  ]},
   
   { id:15, name:'Víctor Jaén', pos:'Centrocampista', status:'OK', performances:[
     {points:2, minutes:21, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
     {points:null, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
     {points:4, minutes:63, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,8)'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
+  ]},
   
   { id:16, name:'Á. Brito', pos:'Centrocampista', status:'OK', performances:[
     {points:7, minutes:72, goals:0, assists:0, cards:0, comment:'↪️ (7,5)'},
     {points:null, minutes:75, goals:0, assists:0, cards:1, comment:'🟨↪️ (Sin grabación)'},
     {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,1)'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+  
+  ]},
   
   { id:17, name:'Pablo', pos:'Centrocampista', status:'Lesionado', performances:[
     {points:4, minutes:69, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,9)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
+  ]},
   
   { id:18, name:'Javi Pardo', pos:'Centrocampista', status:'OK', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(Sin grabación)'},
     {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+  ]},
   
   { id:19, name:'Mario', pos:'Centrocampista', status:'Duda', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+  ]},
   
   { id:20, name:'J. Ogayar', pos:'Centrocampista', status:'OK', performances:[
     {points:1, minutes:18, goals:0, assists:0, cards:1, comment:'🟨↩️ (6,3)'},
     {points:null, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
     {points:2, minutes:27, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+  ]},
   
   { id:21, name:'Rodri de Castro', pos:'Atacante', status:'Lesionado', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
+  ]},
   
   { id:22, name:'H. Panizo', pos:'Atacante', status:'OK', performances:[
     {points:4, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (6,9)'},
     {points:null, minutes:64, goals:0, assists:0, cards:0, comment:'↪️ (Sin grabación)'},
     {points:4, minutes:27, goals:0, assists:0, cards:0, comment:'↩️ (6,9)'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+  ]},
   
   { id:23, name:'Manu Medina', pos:'Atacante', status:'OK', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+  ]},
   
   { id:24, name:'Manu de Vicente', pos:'Atacante', status:'Lesionado', performances:[
     {points:1, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (6,3)'},
     {points:null, minutes:26, goals:0, assists:0, cards:1, comment:'🟨↩️ (Sin grabación)'},
     {points:1, minutes:27, goals:0, assists:0, cards:1, comment:'🟨↩️ (6,3)'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}]},
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
+  ]},
   
   { id:25, name:'S. Griñán', pos:'Atacante', status:'OK', performances:[
     {points:3, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'},
     {points:null, minutes:90, goals:1, assists:0, cards:1, comment:'🟨⚽ (Sin grabación)'},
     {points:7, minutes:63, goals:1, assists:0, cards:0, comment:'↪️⚽🅿️ (6,8+⚽🅿️)'},
-    //{points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}]}
+    {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+  ]}
 ];
 
 // 📰 Noticias del equipo
@@ -354,6 +355,7 @@ function render(){
   filtered.forEach(p=>{
     const lastThree = p.performances.slice(-3);
     const totalPoints = calculateTotals(p.performances).points;
+    const avgPoints = calculateAvg(p.performances); // 🟡 Añadido cálculo de media
 
     let bgClass = '';
     if (p.status === 'OK') bgClass = 'bg-green-800';
@@ -373,6 +375,7 @@ function render(){
         <div class='text-right'>
           <div class='text-xs text-slate-400'>Puntos</div>
           <div class='text-lg font-bold'>${totalPoints}</div>
+          <div class='text-xs text-slate-300 mt-1'>Media: ${avgPoints}</div> <!-- 🟢 Nueva línea -->
         </div>
       </div>
       <div class='mt-3'>
@@ -388,9 +391,9 @@ function render(){
   document.getElementById('injuredCount').textContent =
     players.filter(p => p.status === "Lesionado").length;
 
-renderInjuryFeed(); // 🔔 Actualiza las noticias
-  
+  renderInjuryFeed(); // 🔔 Actualiza las noticias
 }
+
 
 function openModal(id){
   const p=players.find(x=>x.id===id); if(!p) return;
