--- a/InformesPost_partido.html
+++ b/InformesPost_partido.html
@@ -154,12 +154,19 @@
 </header>
 
 <section class="timeline">
-
+  <div class="card">
+    <img src="Jornada5.jpg" alt="Jornada 5">
+    <div class="info">
+      <h2>Jornada 5</h2>
+      <a href="InformeJ5.html" target="_blank">Ver Alineación Probable</a>
+    </div>
+  </div>
+  
   <div class="card">
     <img src="Jornada4.jpg" alt="Jornada 4">
     <div class="info">
       <h2>Jornada 4</h2>
-      <a href="InformeJ4.html" target="_blank">Ver Alineación Probable</a>
+      <a href="InformeJ4.html" target="_blank">Ver Informe</a>
     </div>
   </div>
 
