--- a/InformeJ4.html
+++ b/InformeJ4.html
@@ -504,7 +504,7 @@
 
   <div class="header-informe">
     <h1>Informe Jornada 4</h1>
-    <div class="resultado-principal">EFMO Boadilla 'B' - Puerta de Madrid 'B'</div>
+    <div class="resultado-principal">EFMO Boadilla 'B' 0-1 Puerta de Madrid 'B'</div>
   </div>
 
   <!-- Alineación Probable -->
@@ -587,7 +587,309 @@
       renderFormationProbable('4-3-3');
     </script>
   </div>
+<!-- Alineación Confirmada -->
+  <div class="seccion">
+    <h3>Alineación Confirmada</h3>
 
+    <div class="container-responsive">
+      <div class="header-responsive">
+        <div class="team-name-responsive">E.F.M.O. Boadilla</div>
+        <div class="formation-responsive">4-3-3</div>
+      </div>
+
+      <div class="content-responsive">
+        <div class="field-container-responsive">
+          <div class="field-responsive">
+            <div class="grass-pattern-responsive"></div>
+
+            <div class="players-formation-responsive" id="formation-container-confirmada">
+              <!-- La formación se genera automáticamente -->
+            </div>
+          </div>
+        </div>
+
+        <div class="bench-responsive">
+          <div class="bench-title-responsive">Banquillo</div>
+          <div id="bench-container">
+            <!-- El banquillo se genera automáticamente -->
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      // Datos de los jugadores organizados por posición - ALINEACIÓN CONFIRMADA
+      const playersConfirmada = {
+        'portero': [
+          { number: '13', name: 'Álvaro', rating: '-' }
+        ],
+        'defensas': [
+          { number: '16', name: 'Luisja', rating: '-' },
+          { number: '5', name: 'Adriano', rating: '-' },
+          { number: '6', name: 'Rafa', rating: '-' },
+          { number: '17', name: 'J. Zarcero', rating: '-' }
+        ],
+        'mediocentros': [
+          { number: '23', name: 'J. Pardo', rating: '-' },
+          { number: '2', name: 'Á. Brito', rating: '-' },
+          { number: '14', name: 'J. Ogayar', rating: '-' }
+        ],
+        'delanteros': [
+          { number: '7', name: 'J. Martínez', rating: '-' },
+          { number: '24', name: 'H. Panizo', rating: '-' },
+          { number: '20', name: 'A. Molina', rating: '-' }
+        ]
+      };
+
+      // Datos del banquillo
+      const benchPlayers = [
+        { number: '1', name: 'Gabri', rating: '-' },
+        { number: '4', name: 'Á. Infante', rating: '-' },
+        { number: '12', name: 'L. Lausín', rating: '-' },
+        { number: '10', name: 'Kito', rating: '-' },
+        { number: '3', name: 'Mario', rating: '-' },
+        { number: '24', name: 'Manu Medina', rating: '-' },
+        { number: '9', name: 'S. Griñán', rating: '-' }
+      ];
+
+      // Configuraciones de formaciones
+      const formationsConfirmada = {
+        '4-3-3': [
+          playersConfirmada.delanteros,
+          playersConfirmada.mediocentros,
+          playersConfirmada.defensas,
+          playersConfirmada.portero
+        ]
+      };
+
+      // Función para aplicar el color correcto según la puntuación
+      function applyRatingColor(element, rating) {
+        if (rating === '-') {
+          element.classList.add('score-gray');
+          return;
+        }
+
+        const numericRating = parseFloat(rating);
+
+        if (numericRating >= 9.0) {
+          element.classList.add('score-darkblue');
+        } else if (numericRating >= 8.0) {
+          element.classList.add('score-blue');
+        } else if (numericRating >= 7.0) {
+          element.classList.add('score-green');
+        } else if (numericRating >= 6.0) {
+          element.classList.add('score-yellow');
+        } else if (numericRating >= 3.0) {
+          element.classList.add('score-red');
+        } else {
+          element.classList.add('score-gray');
+        }
+      }
+
+      // Función para renderizar una formación
+      function renderFormationConfirmada(formationKey) {
+        const formationContainer = document.getElementById('formation-container-confirmada');
+        formationContainer.innerHTML = '';
+
+        const formation = formationsConfirmada[formationKey];
+
+        formation.forEach(rowPlayers => {
+          const row = document.createElement('div');
+          row.className = 'player-row-responsive';
+
+          rowPlayers.forEach(player => {
+            const playerElement = document.createElement('div');
+            playerElement.className = 'player-responsive';
+
+            playerElement.innerHTML = `
+              <div class="player-circle-responsive">${player.number}</div>
+              <div class="player-rating-responsive">${player.rating}</div>
+              <div class="player-name-responsive">${player.name}</div>
+            `;
+
+            row.appendChild(playerElement);
+          });
+
+          formationContainer.appendChild(row);
+        });
+
+        // Aplicar colores a los ratings
+        document.querySelectorAll('.player-rating-responsive').forEach(ratingElement => {
+          const rating = ratingElement.textContent;
+          applyRatingColor(ratingElement, rating);
+        });
+
+        document.querySelector('.formation-responsive').textContent = formationKey;
+      }
+
+      // Función para renderizar el banquillo
+      function renderBench() {
+        const benchContainer = document.getElementById('bench-container');
+        benchContainer.innerHTML = '';
+
+        benchPlayers.forEach(player => {
+          const benchPlayerElement = document.createElement('div');
+          benchPlayerElement.className = 'bench-player-responsive';
+
+          benchPlayerElement.innerHTML = `
+            <div class="bench-player-info-responsive">
+              <div class="bench-player-number-responsive">${player.number}</div>
+              <div class="bench-player-name-responsive">${player.name}</div>
+            </div>
+            <div class="bench-player-rating-responsive">${player.rating}</div>
+          `;
+
+          benchContainer.appendChild(benchPlayerElement);
+          });
+        
+          // Aplicar colores a los ratings del banquillo
+        document.querySelectorAll('.bench-player-rating-responsive').forEach(ratingElement => {
+          const rating = ratingElement.textContent;
+          applyRatingColor(ratingElement, rating);
+        });
+      }
+
+      renderFormationConfirmada('4-3-3');
+      renderBench();
+    </script>
+  </div>
+
+  
+  <!-- Goles  
+  <div class="seccion">
+    <h3>Goles a Favor</h3>
+    <div class="goles-lista">
+      <div class="gol">
+        <span class="minuto">2'</span> - J. Martínez (Asistencia: Kito)
+      </div>
+      <div class="gol">
+        <span class="minuto">9'</span> - S. Griñán (p.)
+      </div>
+    </div>
+  </div> -->
+
+  <!-- Cambios -->
+  <div class="seccion">
+    <h3>Cambios Realizados</h3>
+    <div class="cambios-lista">
+      <div class="cambio">
+        <span class="minuto">45'</span>
+        <div class="jugadores-cambio">
+          <span>A. Molina</span>
+          <span class="flecha">→</span>
+          <span>Kito</span>
+        </div>
+      </div>
+      <div class="cambio">
+        <span class="minuto">45'</span>
+        <div class="jugadores-cambio">
+          <span>H. Panizo</span>
+          <span class="flecha">→</span>
+          <span>S. Griñán</span>
+        </div>
+      </div>
+      <div class="cambio">
+        <span class="minuto">71'</span>
+        <div class="jugadores-cambio">
+          <span>J. Zarcero</span>
+          <span class="flecha">→</span>
+          <span>L. Lausín</span>
+        </div>
+      </div>
+      <div class="cambio">
+        <span class="minuto">82'</span>
+        <div class="jugadores-cambio">
+          <span>Á. Brito</span>
+          <span class="flecha">→</span>
+          <span>Manu Medina</span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Once Final -->
+  <div class="seccion">
+    <h3>Once Final</h3>
+    <div class="formacion-titulo">4-3-3</div>
+
+    <div class="field-container-responsive">
+      <div class="field-responsive">
+        <div class="grass-pattern-responsive"></div>
+
+        <div class="players-formation-responsive" id="formation-container-final">
+          <!-- La formación se genera automáticamente -->
+        </div>
+      </div>
+    </div>
+
+    <script>
+      // Datos de los jugadores organizados por posición - ONCE FINAL
+      const playersFinal = {
+        'portero': [
+          { number: '13', name: 'Álvaro' }
+        ],
+        'defensas': [
+          { number: '16', name: 'Luisja' },
+          { number: '5', name: 'Adriano' },
+          { number: '6', name: 'Rafa' },
+          { number: '12', name: 'L. Lausín' }
+        ],
+        'mediocentros': [
+          { number: '23', name: 'Javi Pardo' }
+          { number: '10', name: 'Kito' },
+          { number: '14', name: 'J. Ogayar' }
+        ],
+        'delanteros': [
+          { number: '7', name: 'J. Martínez' },
+          { number: '9', name: 'S. Griñán' },
+          { number: '11', name: 'Manu Medina' }
+        ]
+      };
+
+      // Configuraciones de formaciones
+      const formationsFinal = {
+        '4-3-3': [
+          playersFinal.delanteros,
+          playersFinal.mediocentros,
+          playersFinal.defensas,
+          playersFinal.portero
+        ]
+      };
+
+      // Función para renderizar una formación
+      function renderFormationFinal(formationKey) {
+        const formationContainer = document.getElementById('formation-container-final');
+        formationContainer.innerHTML = '';
+
+        const formation = formationsFinal[formationKey];
+
+        formation.forEach(rowPlayers => {
+          const row = document.createElement('div');
+          row.className = 'player-row-responsive';
+
+          rowPlayers.forEach(player => {
+            const playerElement = document.createElement('div');
+            playerElement.className = 'player-responsive';
+
+            playerElement.innerHTML = `
+              <div class="player-circle-responsive">${player.number}</div>
+              <div class="player-name-responsive">${player.name}</div>
+            `;
+
+            row.appendChild(playerElement);
+          });
+
+          formationContainer.appendChild(row);
+        });
+      }
+
+      // Renderizar formación para once final
+      renderFormationFinal('4-3-3');
+    </script>
+  </div>
+
+</div>
+  
 </body>
 </html>
        
