--- a/Stats25-26.html
+++ b/Stats25-26.html
@@ -428,33 +428,33 @@
   <script>
     // Datos de los jugadores con los minutos jugados en cada partido
     const jugadores = [
-      {nombre: "Agudo", goles: 0, asistencias: 0, minutos: [0, 54, 0]},
       {nombre: "Prueba", goles: 0, asistencias: 0, minutos: [0, 54, 0, 90, 90, 10, 50, 60, 10, 20, 30, 33]},
-      {nombre: "Gabri", goles: 0, asistencias: 0, minutos: [0, 0, 90]},
-      {nombre: "Álvaro", goles: 0, asistencias: 0, minutos: [90, 36, 0]},
-      {nombre: "Luisja", goles: 0, asistencias: 0, minutos: [90, 90, 90]},
-      {nombre: "Martínez", goles: 1, asistencias: 0, minutos: [90, 90, 63]},
-      {nombre: "Rafa Crooke", goles: 0, asistencias: 0, minutos: [0, 26, 0]},
-      {nombre: "Jacobo", goles: 0, asistencias: 0, minutos: [0, 0, 63]},
-      {nombre: "Rodri", goles: 0, asistencias: 0, minutos: [90, 90, 90]},
-      {nombre: "Adriano", goles: 0, asistencias: 0, minutos: [90, 64, 27]},
-      {nombre: "Infante", goles: 0, asistencias: 0, minutos: [0, 0, 0]},
-      {nombre: "Molina", goles: 0, asistencias: 0, minutos: [45, 75, 0]},
-      {nombre: "Lucas Lausín", goles: 0, asistencias: 0, minutos: [0, 15, 20]},
-      {nombre: "Zarcero", goles: 0, asistencias: 0, minutos: [90, 0, 90]},
-      {nombre: "Kito", goles: 0, asistencias: 1, minutos: [90, 75, 70]},
-      {nombre: "Víctor Jaén", goles: 0, asistencias: 0, minutos: [21, 15, 63]},
-      {nombre: "Brito", goles: 0, asistencias: 0, minutos: [72, 75, 90]},
-      {nombre: "Pablo", goles: 0, asistencias: 0, minutos: [69, 0, 0]},
-      {nombre: "Javi Pardo", goles: 0, asistencias: 0, minutos: [0, 90, 90]},
-      {nombre: "Mario", goles: 0, asistencias: 0, minutos: [0, 0, 0]},
-      {nombre: "Ogayar", goles: 0, asistencias: 0, minutos: [18, 15, 27]},
-      {nombre: "Rodri de Castro", goles: 0, asistencias: 0, minutos: [0, 0, 0]},
-      {nombre: "H. Panizo", goles: 0, asistencias: 0, minutos: [45, 64, 27]},
-      {nombre: "Manu Medina", goles: 0, asistencias: 0, minutos: [0, 0, 0]},
-      {nombre: "Manu de V.", goles: 0, asistencias: 0, minutos: [45, 26, 27]},
-      {nombre: "S. Griñán", goles: 2, asistencias: 0, minutos: [45, 90, 63]}
-    ];
+      {nombre: "Agudo", goles: 0, asistencias: 0, minutos: [0, 54, 0, 0]},
+      {nombre: "Gabri", goles: 0, asistencias: 0, minutos: [0, 0, 90, 0]},
+      {nombre: "Álvaro", goles: 0, asistencias: 0, minutos: [90, 36, 0, 90]},
+      {nombre: "Luisja", goles: 0, asistencias: 0, minutos: [90, 90, 90, 90]},
+      {nombre: "Martínez", goles: 1, asistencias: 0, minutos: [90, 90, 63, 90]},
+      {nombre: "Rafa Crooke", goles: 0, asistencias: 0, minutos: [0, 26, 0, 90]},
+      {nombre: "Jacobo", goles: 0, asistencias: 0, minutos: [0, 0, 63, 0]},
+      {nombre: "Rodri", goles: 0, asistencias: 0, minutos: [90, 90, 90, 0]},
+      {nombre: "Adriano", goles: 0, asistencias: 0, minutos: [90, 64, 27, 90]},
+      {nombre: "Infante", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0]},
+      {nombre: "Molina", goles: 0, asistencias: 0, minutos: [45, 75, 0, 45]},
+      {nombre: "Lucas Lausín", goles: 0, asistencias: 0, minutos: [0, 15, 20, 19]},
+      {nombre: "Zarcero", goles: 0, asistencias: 0, minutos: [90, 0, 90, 71]},
+      {nombre: "Kito", goles: 0, asistencias: 1, minutos: [90, 75, 70, 45]},
+      {nombre: "Víctor Jaén", goles: 0, asistencias: 0, minutos: [21, 15, 63, 0]},
+      {nombre: "Brito", goles: 0, asistencias: 0, minutos: [72, 75, 90, 82]},
+      {nombre: "Pablo", goles: 0, asistencias: 0, minutos: [69, 0, 0, 0]},
+      {nombre: "Javi Pardo", goles: 0, asistencias: 0, minutos: [0, 90, 90, 90]},
+      {nombre: "Mario", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0]},
+      {nombre: "Ogayar", goles: 0, asistencias: 0, minutos: [18, 15, 27, 90]},
+      {nombre: "Rodri de Castro", goles: 0, asistencias: 0, minutos: [0, 0, 0, 0]},
+      {nombre: "H. Panizo", goles: 0, asistencias: 0, minutos: [45, 64, 27, 45]},
+      {nombre: "Manu Medina", goles: 0, asistencias: 0, minutos: [0, 0, 0, 8]},
+      {nombre: "Manu de V.", goles: 0, asistencias: 0, minutos: [45, 26, 27, 0]},
+      {nombre: "S. Griñán", goles: 2, asistencias: 0, minutos: [45, 90, 63, 45]}
+  ];
 
     // Función para obtener la clase de color según el índice de la jornada
     function obtenerClaseColor(indiceJornada) {
